# gtIncludabler

./: .gitignore  CMakeLists.txt  buildScript.sh
Src/: main.cpp
Src/Converter/Headers/: converter.hpp
Src/Converter/Sources/: converter.cpp
Src/Tests/: CMakeLists.txt  gTestsMain.cpp
Src/Tests/Sources/: converterTests.cpp
